CustomObjects/objects/SBQQDS__DocuSignTag__c.object
<CustomObject>
    <description>DocuSign tag available for use in quote templates to indicate placeholder for signatures, initials and data entry fields.</description>
    <fields>
        <fullName>SBQQDS__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates this tag is active and available for use.</description>
        <inlineHelpText>Flag that indicates this tag is active and available for use.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQDS__AnchorName__c</fullName>
        <description>Text available for use in quote templates to place this tag in signed document.</description>
        <inlineHelpText>Text available for use in quote templates to place this tag in signed document.</inlineHelpText>
        <label>Anchor Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQDS__TargetField__c</fullName>
        <description>Field updated by information collected in this tag.</description>
        <inlineHelpText>Field updated by information collected in this tag.</inlineHelpText>
        <label>Target Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signed Date</fullName>
                </value>
                <value>
                    <fullName>Recipient Name</fullName>
                </value>
                <value>
                    <fullName>Recipient Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQDS__Type__c</fullName>
        <description>Type of field generated by DocuSign when rendering this tag.</description>
        <inlineHelpText>Type of field generated by DocuSign when rendering this tag.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Date Signed</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Decline</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Email Address</fullName>
                </value>
                <value>
                    <fullName>Envelope ID</fullName>
                </value>
                <value>
                    <fullName>First Name</fullName>
                </value>
                <value>
                    <fullName>Full Name</fullName>
                </value>
                <value>
                    <fullName>Initial Here</fullName>
                </value>
                <value>
                    <fullName>Last Name</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Note</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Radio Group</fullName>
                </value>
                <value>
                    <fullName>Sign Here</fullName>
                </value>
                <value>
                    <fullName>Signer Attachment</fullName>
                </value>
                <value>
                    <fullName>SSN</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Title</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Signature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DocuSign Tag</label>
    <listViews>
        <fullName>SBQQDS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>